--- a/enjoeat/Gemfile
+++ b/enjoeat/Gemfile
@@ -1,10 +1,8 @@
 source "https://rubygems.org"
 
-gem 'capybara'
-gem 'cucumber'
-gem 'rspec'
-gem 'selenium-webdriver'
-
-
-#POM (dependencia do Maven Java)
-#Gem (dependencia do Blundle Ruby)
+group :test do
+  gem 'capybara', '3.14'
+  gem 'cucumber', '3.1.2'
+  gem 'rspec', '3.7.0'
+  gem 'selenium-webdriver', '3.141'
+end
