--- a/enjoeat/cucumber.yaml
+++ b/enjoeat/cucumber.yaml
@@ -3,3 +3,6 @@ default: -p dot
 bdd: --format pretty
 dot: --format progress
 html: --format html --out=log/report.html
+chrome: -p dot BROWSER=chrome
+chrome_headless: -p dot BROWSER=chrome_headless
+firefox: -p dot BROWSER=firefox
